# dataflow-app

./: .gitattributes  IMPORANT_CONTEXT_TAURI_APP.txt  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
scripts/: build-sidecar-simple.bat  build-sidecar.bat  build-sidecar.ps1  build-sidecar.sh  build-simple.js  build.js  fix-line-endings.js  package.sh
scripts/build_temp/: dataflow_sidecar.spec
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/json_structure/: edges.json  node_types.json
src-tauri/src/: lib.rs  main.rs
src/backends/: main.py  pyproject.toml  requirements.txt  requirements_clean.txt
