[project]
name = "backends"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph>=0.17.2",
    "click>=8.1.8",
    "data-flow-generator>=0.2.4",
    "fastapi>=0.104.0",
    "macholib>=1.16.2",
    "packaging>=23.1",
    "pefile>=2024.1.1",
    "platformdirs>=4.3.7",
    "pydantic>=2.4.2",
    "pyinstaller>=5.11.0",
    "python-multipart>=0.0.6",
    "pywin32-ctypes>=0.2.0",
    "setuptools>=65.6.3",
    "starlette>=0.46.2",
    "uv>=0.1.24",
    "uvicorn>=0.23.2",
]
